[gd_scene load_steps=35 format=2]

[ext_resource path="res://src/main/career/ui/progress-board-clock-label.gd" type="Script" id=1]
[ext_resource path="res://assets/main/career/ui/map/landmark-forest.png" type="Texture2D" id=2]
[ext_resource path="res://assets/main/career/ui/clock-advance.wav" type="AudioStream" id=3]
[ext_resource path="res://src/main/career/ui/progress-board-title.gd" type="Script" id=4]
[ext_resource path="res://src/main/career/ui/progress-board-clock-visuals.gd" type="Script" id=5]
[ext_resource path="res://src/main/career/ui/progress-board-player.gd" type="Script" id=6]
[ext_resource path="res://src/main/career/ui/progress-board-clock.gd" type="Script" id=7]
[ext_resource path="res://src/main/career/ui/ProgressBoardTrail.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/main/utils/icon-outline.gdshader" type="Shader" id=9]
[ext_resource path="res://assets/main/ui/font/fredoka-one-regular.ttf" type="FontFile" id=10]
[ext_resource path="res://assets/main/career/ui/map/player-sheet.png" type="Texture2D" id=11]
[ext_resource path="res://src/main/career/ui/ProgressBoardMapLemon.tscn" type="PackedScene" id=12]
[ext_resource path="res://assets/main/career/ui/progress-board.png" type="Texture2D" id=13]
[ext_resource path="res://src/main/ui/theme/chalkboard-36.theme" type="Theme" id=14]
[ext_resource path="res://src/main/career/ui/progress-board.gd" type="Script" id=15]
[ext_resource path="res://assets/main/career/ui/progress-board-appear.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/main/career/ui/clock-ring.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/main/career/ui/progress-board-player-move.wav" type="AudioStream" id=18]
[ext_resource path="res://src/main/career/ui/progress-board-map-holder.gd" type="Script" id=19]

[sub_resource type="ShaderMaterial" id=29]
shader = ExtResource( 9 )
shader_param/width = 8.0
shader_param/white = Color( 0.811765, 0.772549, 0.415686, 1 )
shader_param/black = Color( 0.121569, 0.0941176, 0.0941176, 1 )
shader_param/sample_count = 24

[sub_resource type="Animation" id=23]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "alone"
loop_mode = 1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Animation" id=25]
resource_name = "default"
loop_mode = 1
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.5 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="FontFile" id=26]
size = 36
outline_size = 5
outline_color = Color( 0.121569, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 10 )

[sub_resource type="FontFile" id=42]
size = 28
outline_size = 3
outline_color = Color( 0.423529, 0.262745, 0.192157, 1 )
font_data = ExtResource( 10 )

[sub_resource type="Gradient" id=37]
offsets = PackedFloat32Array( 0, 0.695652 )
colors = PackedColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture2D" id=4]
gradient = SubResource( 37 )

[sub_resource type="ParticleProcessMaterial" id=38]
flag_disable_z = true
direction = Vector3( -100, -40, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 4 )

[sub_resource type="ParticleProcessMaterial" id=39]
flag_disable_z = true
direction = Vector3( 100, -40, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 4 )

[sub_resource type="ParticleProcessMaterial" id=40]
flag_disable_z = true
direction = Vector3( -100, 40, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 4 )

[sub_resource type="ParticleProcessMaterial" id=41]
flag_disable_z = true
direction = Vector3( 100, 40, 0 )
spread = 15.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 600.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=34]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Clock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 422, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChalkboardRegion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 171.8, 66.396 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChalkboardRegion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChalkboardRegion:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Backdrop:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Backdrop:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Clock:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ChalkboardRegion:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("ProgressBoardDisappear:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=36]
resource_name = "hide"
length = 0.166667
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("Clock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0.0333333, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 422, 8 ), Vector2( 822, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0.0333333, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChalkboardRegion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0.0333333, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Vector2( 171.8, 66.396 ), Vector2( 521.8, 66.396 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChalkboardRegion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0.0333333, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChalkboardRegion:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0.0333333, 0.0666667, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.02, 0.98 ), Vector2( 1.02, 0.98 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Backdrop:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0.033, 0.165 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Backdrop:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0.0333333, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Clock:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PackedFloat32Array( 0.033, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ChalkboardRegion:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PackedFloat32Array( 0.033, 0.166667 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "audio"
tracks/9/path = NodePath("ProgressBoardDisappear")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PackedFloat32Array( 0 )
}

[sub_resource type="Animation" id=31]
resource_name = "show"
length = 0.5
step = 0.0333333
tracks/0/type = "value"
tracks/0/path = NodePath("Clock:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.233333, 0.366667 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 322, 8 ), Vector2( 322, 8 ), Vector2( 422, 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Clock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PackedFloat32Array( 0, 0.233333, 0.366667 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ChalkboardRegion:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PackedFloat32Array( 0, 0.233333, 0.366667 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.8, 66.396 ), Vector2( 21.8, 66.396 ), Vector2( 171.8, 66.396 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ChalkboardRegion:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PackedFloat32Array( 0, 0.233333, 0.366667 ),
"transitions": PackedFloat32Array( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ChalkboardRegion:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PackedFloat32Array( 0, 0.233333, 0.366667, 0.416667, 0.5 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 1.05, 0.95 ), Vector2( 1.05, 0.95 ), Vector2( 0.99, 1.01 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Backdrop:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Backdrop:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Clock:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PackedFloat32Array( 0, 0.233333 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ChalkboardRegion:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PackedFloat32Array( 0, 0.231 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "audio"
tracks/9/path = NodePath("ProgressBoardAppear")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 16 )
} ],
"times": PackedFloat32Array( 0.166667 )
}

[node name="ProgressBoard" type="CanvasLayer"]
script = ExtResource( 15 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="ChalkboardRegion" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -340.2
offset_top = -233.604
offset_right = 340.203
offset_bottom = 233.604
pivot_offset = Vector2( 340.2, 233.604 )
mouse_filter = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Chalkboard" type="TextureRect" parent="ChalkboardRegion"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 13 )
expand = true
stretch_mode = 1

[node name="MapHolder" type="Control" parent="ChalkboardRegion"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 19 )

[node name="Map" parent="ChalkboardRegion/MapHolder" instance=ExtResource( 12 )]
offset_right = 0.0
offset_bottom = 0.0

[node name="Trail" parent="ChalkboardRegion" instance=ExtResource( 8 )]

[node name="Player" type="Control" parent="ChalkboardRegion"]
offset_left = 93.4843
offset_top = 161.542
offset_right = 93.4843
offset_bottom = 161.542
script = ExtResource( 6 )
trail_path = NodePath("../Trail")

[node name="PlayerSprite" type="Sprite2D" parent="ChalkboardRegion/Player"]
material = SubResource( 29 )
position = Vector2( 0, -24 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 11 )
hframes = 2
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChalkboardRegion/Player/PlayerSprite"]
autoplay = "default"
anims/RESET = SubResource( 23 )
anims/alone = SubResource( 24 )
anims/default = SubResource( 25 )

[node name="Label" type="Label" parent="ChalkboardRegion/Player"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -92.0
offset_right = 25.0
offset_bottom = -42.0
custom_minimum_size = Vector2( 50, 50 )
theme_override_colors/font_color = Color( 0.811765, 0.803922, 0.803922, 1 )
theme_override_fonts/font = SubResource( 26 )
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerMoveSound" type="AudioStreamPlayer" parent="ChalkboardRegion/Player"]
stream = ExtResource( 18 )
bus = "Sound Bus"

[node name="Shadow" type="Polygon2D" parent="ChalkboardRegion"]
color = Color( 0, 0, 0, 0.392157 )
antialiased = true
polygon = PackedVector2Array( 16, 16, 21, 16, 21, 446, 665, 446, 665, 451, 16, 451 )

[node name="Title" type="Control" parent="ChalkboardRegion"]
modulate = Color( 1, 0.5, 0.945313, 1 )
anchor_right = 1.0
offset_left = 30.0
offset_top = 21.7091
offset_right = -30.0
offset_bottom = 70.7091
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="ChalkboardRegion/Title"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control1" type="Control" parent="ChalkboardRegion/Title/HBoxContainer"]
offset_right = 189.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ChalkboardRegion/Title/HBoxContainer/Control1"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -25.0
offset_right = 32.5
offset_bottom = 25.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="ChalkboardRegion/Title/HBoxContainer"]
offset_left = 193.0
offset_right = 426.0
offset_bottom = 50.0
theme = ExtResource( 14 )
text = "Lemony Thickets"

[node name="Control2" type="Control" parent="ChalkboardRegion/Title/HBoxContainer"]
offset_left = 430.0
offset_right = 620.0
offset_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="ChalkboardRegion/Title/HBoxContainer/Control2"]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.5
offset_top = -25.0
offset_right = 32.5
offset_bottom = 25.0
custom_minimum_size = Vector2( 65, 50 )
texture = ExtResource( 2 )
expand = true
flip_h = true

[node name="Clock" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 8.0
offset_right = 90.0029
offset_bottom = 58.0
mouse_filter = 2
script = ExtResource( 7 )

[node name="VisualsHolder" type="Control" parent="Clock"]
offset_right = 50.0
offset_bottom = 50.0

[node name="Visuals" type="Node2D" parent="Clock/VisualsHolder"]
position = Vector2( 25, 25 )
script = ExtResource( 5 )
radius = 22.0
line_width = 3.4
minute_hand_length = 15.0
hour_hand_length = 10.0
filled_color = Color( 0.894118, 0.709804, 0.584314, 1 )
line_color = Color( 0.423529, 0.262745, 0.192157, 1 )

[node name="MinuteHand" type="Line2D" parent="Clock/VisualsHolder/Visuals"]
points = PackedVector2Array( 0, 0, -6.55671e-07, -15 )
width = 3.4
default_color = Color( 0.423529, 0.262745, 0.192157, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="HourHand" type="Line2D" parent="Clock/VisualsHolder/Visuals"]
points = PackedVector2Array( 0, 0, -4.37114e-07, -10 )
width = 3.4
default_color = Color( 0.423529, 0.262745, 0.192157, 1 )
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="Label" type="Label" parent="Clock"]
anchor_bottom = 1.0
offset_left = 60.0
offset_right = 109.0
size_flags_vertical = 7
theme_override_fonts/font = SubResource( 42 )
text = "10:15 am"
vertical_alignment = 1
script = ExtResource( 1 )

[node name="Particles" type="Control" parent="Clock/Label"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5

[node name="Nw" type="GPUParticles2D" parent="Clock/Label/Particles"]
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource( 38 )

[node name="Ne" type="GPUParticles2D" parent="Clock/Label/Particles"]
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource( 39 )

[node name="Sw" type="GPUParticles2D" parent="Clock/Label/Particles"]
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource( 40 )

[node name="Se" type="GPUParticles2D" parent="Clock/Label/Particles"]
emitting = false
amount = 2
lifetime = 0.6
one_shot = true
explosiveness = 1.0
process_material = SubResource( 41 )

[node name="ClockAdvanceSound" type="AudioStreamPlayer" parent="Clock"]
stream = ExtResource( 3 )
volume_db = 2.0
bus = "Sound Bus"

[node name="ClockRingSound" type="AudioStreamPlayer" parent="Clock"]
stream = ExtResource( 17 )
volume_db = -4.0
bus = "Sound Bus"

[node name="ProgressBoardAppear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0
pitch_scale = 1.1
bus = "Sound Bus"

[node name="ProgressBoardDisappear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0
bus = "Sound Bus"

[node name="ShowAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 34 )
anims/hide = SubResource( 36 )
anims/show = SubResource( 31 )

[node name="HideTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="AnimateStartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="visibility_changed" from="Backdrop" to="." method="_on_Backdrop_visibility_changed"]
[connection signal="animation_finished" from="ShowAnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]
[connection signal="timeout" from="AnimateStartTimer" to="." method="_on_AnimateStartTimer_timeout"]
